# litreview

./: .gitignore  2DHPC.csv  2D_read.csv  LICENSE  Monografia-Google-Scholar.csv  Monografia-IEEE.csv  Monografia-Scopus.csv  Monografia-Web-of-Science.csv  README.md  analysis.slurm  classified.csv  config.yaml  notHPC.csv  paper_analysis.py  paper_analysis_173821.out  pyproject.toml  zeroshot.py
litreview/: __init__.py  analysis.py  utils.py  visualization.py  zotero.py
scripts/: run_analysis.py  run_plots.py
