[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["litreview*"]
exclude = ["data*", "results*"]

[project]
name = "litreview"
version = "0.1.0"
description = "A library for literature review paper analysis and visualization"
authors = [
    { name = "Johansell Villalobos" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "transformers",
    "torch",
    "datasets",
    "PyYAML",
    "pyzotero",
]

[project.scripts]
litreview-analysis = "scripts.run_analysis:main"
litreview-plots = "scripts.run_plots:main"
